[gd_scene load_steps=3 format=3 uid="uid://ovtd5sfqwrvp"]

[ext_resource type="Script" uid="uid://c7ofm05quexqd" path="res://random_game.gd" id="1_d1yg4"]
[ext_resource type="FontFile" uid="uid://bm74bnfe2ya21" path="res://PixelOperator8.ttf" id="1_dqiys"]

[node name="RandomGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d1yg4")

[node name="BackButton" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.2800003, 1.2800003)

[node name="BackButton" type="Button" parent="BackButton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dqiys")
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 569.0
offset_top = 360.0
offset_right = 609.0
offset_bottom = 400.0
scale = Vector2(1.914483, 1.7948718)
mouse_filter = 0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.00999999, 1, 0.026499987, 1)

[node name="SmallTimer" type="Timer" parent="MarginContainer"]
wait_time = 0.001
one_shot = true

[node name="VerySmallTimer" type="Timer" parent="MarginContainer"]
wait_time = 0.1

[node name="BigTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 466.0
offset_right = 506.0
offset_bottom = 40.0
scale = Vector2(3.3181431, 2.4650488)

[node name="Label" type="Label" parent="MarginContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_dqiys")

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 596.0
offset_right = 636.0
offset_bottom = 40.0
scale = Vector2(3.3181431, 2.4650488)

[node name="TimeLabel" type="Label" parent="MarginContainer4"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_dqiys")

[node name="Window" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(300, 30)
layout_mode = 0
offset_left = 297.99997
offset_top = 74.0
offset_right = 598.0
offset_bottom = 104.0
scale = Vector2(1.7962362, 16.151482)
color = Color(0.47788018, 0.47788012, 0.47788012, 1)

[node name="ClicksLabel" type="MarginContainer" parent="Window"]
layout_mode = 0
offset_left = 28.657864
offset_top = 2.8467684
offset_right = 268.65787
offset_bottom = 42.846767
scale = Vector2(0.96244437, 0.21313208)
mouse_filter = 2

[node name="Label" type="Label" parent="Window/ClicksLabel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dqiys")
text = "You Clicked x Times"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Window"]
layout_mode = 0
offset_left = 267.99762
offset_top = 0.5308882
offset_right = 387.99762
offset_bottom = 136.53088
scale = Vector2(0.19819838, 0.033714764)

[node name="Button" type="Button" parent="Window/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dqiys")
theme_override_font_sizes/font_size = 128
text = "X"

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer3"]
layout_mode = 2

[connection signal="pressed" from="BackButton/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="timeout" from="MarginContainer/SmallTimer" to="." method="_on_small_timer_timeout"]
[connection signal="timeout" from="MarginContainer/SmallTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MarginContainer/VerySmallTimer" to="." method="_on_very_small_timer_timeout"]
[connection signal="timeout" from="BigTimer" to="." method="_on_big_timer_timeout"]
[connection signal="pressed" from="Window/MarginContainer/Button" to="." method="_on_button_pressed"]
